# pipeline-armor

./: .gitignore  README.md  pipeline-armor.yaml  pyproject.toml
demo/: vulnerable_app.py
docs/example-workflow/: security-gate.yml
pipeline_armor/: __init__.py  cli.py  findings.py  policy.py
pipeline_armor/scanners/: __init__.py  patterns.py  secrets.py
tests/: test_patterns.py  test_secrets.py
