[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-armor"
version = "0.1.0"
description = "Drop-in security gate for GitHub Actions: secrets, deps, and code patterns."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "@forgehk", email = "info@darkforgeai.com" }]
keywords = ["security", "devsecops", "ci-cd", "sast", "secrets-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]
dependencies = [
    "pyyaml>=6.0",
    "pip-audit>=2.7",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4"]

[project.scripts]
pipeline-armor = "pipeline_armor.cli:main"

[tool.setuptools.packages.find]
include = ["pipeline_armor*"]
